// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack,
        filter: bound checkChanged,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            filter: bound checkChanged,
            mov: stack store,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg,
                filter: bound checkChanged,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    filter: bound checkChanged,
                    mov: stack store,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    Node {
      seq: [
        run: effect
      ],
      next: []
    }
  ]
}"
`;

exports[`graphite: show bar 2`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack,
        filter: bound checkChanged,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            filter: bound checkChanged,
            mov: stack store,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg,
                filter: bound checkChanged,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    filter: bound checkChanged,
                    mov: stack store,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: callStack
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                mov: store a,
                compute: callARegStack,
                filter: bound checkChanged,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    filter: bound checkChanged,
                    mov: stack store,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: callStackAReg,
                        filter: bound checkChanged,
                        mov: stack store
                      ],
                      next: [
                        Node {
                          seq: [
                            filter: bound checkChanged,
                            mov: stack store,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []}
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store1 1`] = `
"Node {
  seq: [
    filter: bound checkChanged,
    mov: stack store,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        mov: store a,
        compute: callStackAReg,
        filter: bound checkChanged,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            filter: bound checkChanged,
            mov: stack store,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []}
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store2 1`] = `
"Node {
  seq: [
    filter: bound checkChanged,
    mov: stack store,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []}
  ]
}"
`;

exports[`showcase: event foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        mov: store a,
        compute: callARegStack,
        filter: bound checkChanged,
        mov: stack store
      ],
      next: [
        Node {
          seq: [
            filter: bound checkChanged,
            mov: stack store,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                mov: store b,
                filter: Function,
                mov: a store,
                mov: value store,
                mov: value store,
                mov: store stack,
                filter: bound checkChanged
              ],
              next: [
                Node {
                  seq: [
                    filter: bound checkChanged,
                    mov: stack store,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        mov: store a,
                        compute: callStackAReg,
                        filter: bound checkChanged,
                        mov: stack store
                      ],
                      next: [
                        Node {
                          seq: [
                            filter: bound checkChanged,
                            mov: stack store,
                            mov: stack store
                          ],
                          next: [
                            Node {seq: [], next: []},
                            Node {
                              seq: [
                                run: effect
                              ],
                              next: []
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`showcase: mapped 1`] = `
"Node {
  seq: [
    filter: bound checkChanged,
    mov: stack store,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        run: effect
      ],
      next: []
    }
  ]
}"
`;

exports[`showcase: store a 1`] = `
"Node {
  seq: [
    filter: bound checkChanged,
    mov: stack store,
    mov: stack store
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        mov: store a,
        mov: store b,
        filter: Function,
        mov: a store,
        mov: value store,
        mov: value store,
        mov: store stack,
        filter: bound checkChanged
      ],
      next: [
        Node {
          seq: [
            filter: bound checkChanged,
            mov: stack store,
            mov: stack store
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                mov: store a,
                compute: callStackAReg,
                filter: bound checkChanged,
                mov: stack store
              ],
              next: [
                Node {
                  seq: [
                    filter: bound checkChanged,
                    mov: stack store,
                    mov: stack store
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        run: effect
                      ],
                      next: []
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
